--- a/2019_03_05.md
+++ b/2019_03_05.md
@@ -1,6 +1,7 @@
+![alt text](https://raw.githubusercontent.com/atomikjaye/Stream-Notes/master/assets/twitch-panelStream-Notes.png "Stream Notes Image")
 # Stream Notes - March 5th, 2019
 
-## What did you stream: Pair Programming with @MechJack: learning APIs
+## What did you stream: Pair Programming with [@MechJack](http://www.twitch.tv/mechjack): learning APIs
 
 ### Things I learned
 - Use Github Gists
