Added Stream Notes for Thursday  March 7th 2019

--- a/2019_03_07.md
+++ b/2019_03_07.md
@@ -7,7 +7,7 @@
 
 ## Things I learned
 
-#### [@joshmanders](http://www.twitch.tv/joshmanders)  - HELPED ME WITH EVERYTHING!! 
+#### [@joshmanders](http://www.twitch.tv/joshmanders)  - HELPED ME WITH EVERYTHING!!! 
 - I learned about array mapping and a bit about event loops
 - - [@joshmanders](http://www.twitch.tv/joshmanders) - "Imagine you (the for loop) have a bucket of water balloons(promises), you throw them in the air, and rely on gravity (event loop) to bring them down (which would be the promises being resolved).
 - In order to use Twitch's pub sub, you need to have an Oauth Token that has a scope attached to it, in our case. The Link we used was: https://api.twitch.tv/kraken/oauth2/authorize?response_type=token&client_id=[YOUR CLIENT_ID HERE]&redirect_uri=[YOUR REDIRECT URL HERE]&scope=[ENTER SCOPE HERE]
