Added Stream Notes for Thursday  March 7th 2019

--- a/2019_03_07.md
+++ b/2019_03_07.md
@@ -3,7 +3,7 @@
 
 ## What did you stream: Made promise work, worked on pub sub for sub wall
 
-[![IMAGE ALT TEXT HERE](https://img.youtube.com/vi/YfUGotEQ2byk/0.jpg)](https://www.youtube.com/watch?v=YfUGotEQ2yk)
+[![IMAGE ALT TEXT HERE](https://img.youtube.com/vi/YfUGotEQ2yk/0.jpg)](https://www.youtube.com/watch?v=YfUGotEQ2yk)
 
 ## Things I learned
 
