--- a/2019_03_07.md
+++ b/2019_03_07.md
@@ -3,7 +3,7 @@
 
 ## What did you stream: Made promise work, worked on pub sub for sub wall
 
-[![IMAGE ALT TEXT HERE](https://img.youtube.com/vi/YfUGotEQ2yk/0.jpg)](https://www.youtube.com/watch?v=YfUGotEQ2yk)
+[![IMAGE ALT TEXT HERE](https://i9.ytimg.com/vi/YfUGotEQ2yk/mqdefault.jpg?sqp=CPTYiuQF&rs=AOn4CLDnrd9U8gkKlGJCPpWmCIIlXqRelQ&time=1552067968492)](https://www.youtube.com/watch?v=YfUGotEQ2yk)
 
 ## Things I learned
 
