Added Youtube Thumbnails 🤞🏾🤞🏾I hope they show up properly, and added March 18th 2019

--- a/2019_03_07.md
+++ b/2019_03_07.md
@@ -3,7 +3,7 @@
 
 ## What did you stream: Made promise work, worked on pub sub for sub wall
 
-[![IMAGE ALT TEXT HERE](https://i9.ytimg.com/vi/YfUGotEQ2yk/mqdefault.jpg?sqp=CPTYiuQF&rs=AOn4CLDnrd9U8gkKlGJCPpWmCIIlXqRelQ&time=1552067968492)](https://www.youtube.com/watch?v=YfUGotEQ2yk)
+[![90s Style Youtube thumbnail with gradient triangles and swiggle patterns in the background saying - Javascript Promises and Twitch Pub/Sub Stream Replay March 7th 2019](https://img.youtube.com/vi/YfUGotEQ2yk/0.jpg)](https://www.youtube.com/watch?v=YfUGotEQ2yk)
 
 ## Things I learned
 
