--- a/2019_03_14.md
+++ b/2019_03_14.md
@@ -2,7 +2,7 @@
 # March 14th, 2019
 
 ## What did you stream: Working on a JS Calculator
-[Youtube Stream Replay Link](https://youtu.be/xrf2_UsEWG8)
+[![(90s Style Youtube thumbnail with gradient triangles and swiggle patterns in the background saying - Javascript Challenge Calculator (unfinished) Stream Replay March 14th 2019)](https://img.youtube.com/vi/xrf2_UsEWG8/0.jpg)](https://youtu.be/xrf2_UsEWG8)
 
 ### Things I learned
 - Make sure grid-template-areas has the same amount of rows and columns you've declared, or else it will error out.
