--- a/2019_03_19.md
+++ b/2019_03_19.md
@@ -3,7 +3,7 @@
 # March 19th, 2019
 
 ## What did you stream: JS Calculator, my nemesis
-
+//FIXME: Add Youtube Video <-- for todo purposes
 > Edit Youtube Video below
 > [![(90s Style Youtube thumbnail with gradient triangles and swiggle patterns in the background saying - FreeCodeCamp Lessons & Just Chatting Stream Replay March 19th 2019)](https://img.youtube.com/vi/#/0.jpg)](https://youtu.be/#)
 
