--- a/2019_03_25.md
+++ b/2019_03_25.md
@@ -2,6 +2,7 @@
 # March 25, 2019
 
 ## What did you stream: Breakfast
+//FIXME: Add Youtube Video <-- for todo purposes
 [youtube shortly]
 
 ## Recap
@@ -11,7 +12,7 @@
 - Conferences! Lots and lots of conferences!!
 
 ### Next Steps
-- Don't be a weirdo. LOL 
+- Don't be a weirdo. LOL
 - Find a project to work on
 
 ### Links/ Look into Stuff
