Removed Stream Elements from Jan 15th 2021 stream notes

--- a/2021_01_15.md
+++ b/2021_01_15.md
@@ -17,4 +17,4 @@ Still working on the portfolio website!
 
 **Subscribers**: Aikeiti, WhippetKnitter, 24props
 
-**Chatters**: joewukasch, StreamElements, Humblefoxsage, stomptheyarn, Aikeiti, phrakberg, 24props, JexLumiKhoth, LilyHazel, WhippetKnitter, iwatkins2020
+**Chatters**: joewukasch, Humblefoxsage, stomptheyarn, Aikeiti, phrakberg, 24props, JexLumiKhoth, LilyHazel, WhippetKnitter, iwatkins2020
