--- a/2021_01_25.md
+++ b/2021_01_25.md
@@ -14,8 +14,7 @@
 
 <img alt="Mobile Design view of unfinished atomikjaye portfolio" src="https://i.imgur.com/q9a45NW.png" height="200">
 
-<img alt="Mobile Design view of unfinished atomikjaye portfolio" src="
-https://i.imgur.com/CsQ6R1G.png" height="200">
+<img alt="Mobile Design view of unfinished atomikjaye portfolio" src="https://i.imgur.com/CsQ6R1G.png" height="200">
 
 
 ### Things I learned
