--- a/2021_01_27.md
+++ b/2021_01_27.md
@@ -10,14 +10,12 @@
 - Refined the design of the Sailor Moon Website! We can now start coding! 
 
 Here's what we have so far:
-<img alt="Final design of Sailor Moon website" src="
-https://i.imgur.com/79G4dzf.png" height="200">
 
-<img alt="Final design of Sailor Moon website" src="
-https://i.imgur.com/iz8Jisp.png" height="200">
+<img alt="Final design of Sailor Moon website" src="https://i.imgur.com/79G4dzf.png" height="200">
 
-<img alt="Final design of Sailor Moon website" src="
-https://i.imgur.com/r6djEFb.png" height="200">
+<img alt="Final design of Sailor Moon website" src="https://i.imgur.com/iz8Jisp.png" height="200">
+
+<img alt="Final design of Sailor Moon website" src="https://i.imgur.com/r6djEFb.png" height="200">
 
 ### Things I learned
 - I might need to find a better stream time, always tired lol.
