June 13th Stream Notes

--- a/2022_06_13.md
+++ b/2022_06_13.md
@@ -4,20 +4,25 @@
 
 ## Goals/Announcements
 
-- [] Design Portfolio
+- [x] Design Portfolio
 
 ## What did you stream
 
+ I used Illustrator and Figma to design my profile(?) page. Still deciding how this page is going to function.
+
 ### Things I learned
+
+- I learned about Venezuelan Poodle Moths and Rosy Maple Moths from [@SquibbleDesign](http://www.twitch.tv/SquibbleDesign)!
+- I learned T-Pain has stream music! from [@stomptheyarn](http://www.twitch.tv/stomptheyarn)! View them here: [PizzlePack](https://pizzlepack.com/) (Can I use this on youtube?)
+- My online frands are way too kind 😭💕💖
 
 ### Next Steps
 
-- Figure out a way to add video inside the screen
+- Figure out how this design page is supposed to function
+- Press On Nail Stream??
 
 ### Thank you all who came by
 
-**Subscriber:**
+**Raids:** [@SquibbleDesign](http://www.twitch.tv/SquibbleDesign)!
 
-**Raid:**
-
-**Chatters:**
+**Chatters:** Auth failed D:
